--- a/play.html
+++ b/play.html
@@ -13,9 +13,11 @@
 
 A Game by Alethea Saliba, Watkin Jones, and Emily Adam-Oro
 
+Copyright 2023, all rights reserved.
+
+No portion of this work is permitted to be used in the training or development of artificial intelligence programs.
 
 [[Begin]]
-
 
 
 (set: $activation to 0)</tw-passagedata><tw-passagedata pid="2" name="Begin" tags="" position="800,300" size="100,100">The year is 2049. The effects of climate change on Earth’s environment wrack the whole planet with extreme weather events. Traditional nation-states have collapsed, leaving in their wake new continent spanning federations. The global south, disproportionately affected by the crisis, has accelerated research on technologies to counter the problem. A recent breakthrough in the Alliance of South American States has allowed the creation of a device that can stave off the worst of the effects until a permanent solution can be found. 
