--- a/play.html
+++ b/play.html
@@ -109,7 +109,7 @@ You must now once again weigh your duty to the ASAS against the potential damage
 
 The Cascade Engine does its job exactly as expected, and the massive hurricane, originally slated to make landfall over Novo Rio de Janiero, is shunted far away. Families enjoy days out on the beach, and fishermen make the most of the calm waters. Disaster has been, for now, averted. The government of the ASAS is very pleased with your actions, and make it clear your service will be noted.
 
-Meanwhile, the hurricane makes touches down over the New Washington-York-Boston Urban Habitation Zone, causing massive coastal flooding and crippling infrastructure. Despite attempts at evacuation, the death toll is estimated in the tens of thousands, with property damage in the billions of EAU dollars. The Cascade Engine&#39;s use is condemned in the internation press. You find yourself wondering if you have actually made the right choice.
+Meanwhile, the hurricane touches down over the New Washington-York-Boston Urban Habitation Zone, causing massive coastal flooding and crippling infrastructure. Despite attempts at evacuation, the death toll is estimated in the tens of thousands, with property damage in the billions of EAU dollars. The Cascade Engine&#39;s use is condemned in the internation press. You find yourself wondering if you have actually made the right choice.
 
 Regardless, time passes, and soon you are called in to assess the use of the Cascade Engine again.
 
