--- a/play.html
+++ b/play.html
@@ -46,7 +46,7 @@ tw-story[tags~="Opening"] {
 
 
 
-&#39;&#39;A Game by Alethea Saliba and Wakin Jones
+&#39;&#39;A Game by Alethea Saliba and Watkin Jones
 
 Copyright 2023, all rights reserved.
 
